--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 										<p><strong>Tools-Libraries used</strong>: Pandas | NumPy | Matplotlib | Seaborn | Wordcloud | Scikit-Learn | praw (Reddit webscraping API) | RegEx | NLTK | LazyPredict (Baseline Model) | Pipeline | GridSearchCV | Word2Vec | CountVectorizer | TF-IDF | Logistic Regression | Naive-Bayes | Streamlit</p>
 										<ul class="actions">
 											<li><a href="https://github.com/amozkuang/Scams-vs-Random-Kindness/tree/main/code" class="button">Code</a></li>
-											<li><a href="https://github.com/amozkuang/Scams-vs-Random-Kindness/tree/main/code" class="button">Prototype</a></li>
+											<li><a href="https://scamornot.streamlit.app/" class="button">Prototype</a></li>
 										</ul>
 									</article>
 									<article>
