--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 									<article>
 										<a href="https://github.com/amozkuang/DSI-SG-42-Capstone-FeelFlowAI" class="image"><img src="images/ser.png" alt="" /></a>
 										<h3>FeelFlow AI: Speech Emotion Recognition</h3>
-										<p>Mental health is a trending hot-topic that is gaining traction in its importance. The group that is faced with the mental struggles are the youths, stemming from issues surrounding work, school, family, and/or relationships.<br />
+										<p>Mental health is a trending hot-topic that is gaining traction in its importance. The group most faced with the mental struggles are the youths, with issues stemming from work, school, family, and/or relationships.<br />
 
 											<br /> With that, I developed a prediction tool based on a modified Google WaveNet model for Speech Emotion Recognition to analyse audio characteristics. This alleviates the stress on mental health professionals to assess patients' emotional well-being, aiding in accurate diagnostics and treatment plans.</p>
 											<p><strong>Tools-Libraries used</strong>: Pandas | NumPy | Matplotlib | Seaborn | Scikit-Learn | yt-dlp (YouTube AV scraper) | PyDub | Spleeter | Librosa | PyCaret | Pipeline | RandomSearchCV | Tensorflow | Keras | WaveNet | LSTM | Streamlit</p>
@@ -113,7 +113,7 @@
 									<article>
 										<a href="https://github.com/amozkuang/Chronic-Heart-Disease-Myocardial-Infarction" class="image"><img src="images/heart.jpg" alt="" /></a>
 										<h3>In A Heartbeat: Early Detection of Heart Disease Risk</h3>
-										<p>Being the leading cause of death in the US, our comprehensive study utilises a advanced machine learning models and neural networks to predict heart disease risk by thoroughly analysing possible risk factors - demographic data, lifestyle habits, and medical history. The project aims to enable early detection, and thereby intervention to improve health outcomes. </p>
+										<p>Being the leading cause of death in the US, our comprehensive study utilises advanced machine learning models and neural networks to predict heart disease risk by thoroughly analysing possible risk factors - demographic data, lifestyle habits, and medical history. The project aims to enable early detection, and thereby intervention to improve health outcomes. </p>
 										<p><strong>Tools-Libraries used</strong>: Pandas | NumPy | Matplotlib | Seaborn | Scikit-Learn | LazyPredict (Baseline Model) | Pipeline | GridSearchCV | SMOTE | ADASyn | Logistic Regression | XGBoost | Random Forest | Decision Trees | Tensorflow | Keras | Streamlit</p>
 										<ul class="actions">
 											<li><a href="https://github.com/amozkuang/Chronic-Heart-Disease-Myocardial-Infarction/tree/main/code" class="button">Code</a></li>
@@ -137,7 +137,7 @@
 										<p><strong>Tools-Libraries used</strong>: Pandas | NumPy | Matplotlib | Seaborn | Scikit-Learn | Linear Regression | Regularisation (Ridge & Lasso) | Streamlit</p>
 										<ul class="actions">
 											<li><a href="https://github.com/amozkuang/HDB-Resale-Price/tree/main/code" class="button">Code</a></li>
-											<li><a href="https://github.com/amozkuang/HDB-Resale-Price/blob/main/app.py" class="button">Prototype</a></li>
+											<li><a href="https://resalehdb-pricepredictor.streamlit.app/" class="button">Prototype</a></li>
 										</ul>
 									</article>
 								</div>
